add history api
