# server/interfaces/Cart.ts
@@ -1,0 +1,7 @@
+import Product from './Product';
+
+export type Cart = Product & {
+    productCart: {
+        quantity: number;
+    };
+};
